# discord-rust-bot

./: .env.template  Cargo.toml  README.md  notes.md
src/: attachment.rs  database.rs  discord.rs  main.rs  openai.rs  openai_api.rs  test.rs  util.rs
