[package]
name = "discord-rust-bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgrest = "^1.6.0"
reqwest = { version = "^0.12.7", features = ["json"] }
serde = { version = "^1.0.210", features = ["derive"] }
serde_json = "^1.0.128"
serenity = "^0.12.2"
tokio = { version = "^1.40.0", features = ["full", "rt-multi-thread"] }
